Ticket/Attachment/1847214/992648/make.log
cp lib/Net/SSLeay.pod blib/lib/Net/SSLeay.pod
cp lib/Net/SSLeay/Handle.pm blib/lib/Net/SSLeay/Handle.pm
cp lib/Net/SSLeay.pm blib/lib/Net/SSLeay.pm
AutoSplitting blib/lib/Net/SSLeay.pm (blib/lib/auto/Net/SSLeay)
blib/lib/Net/SSLeay.pm: some names are not unique when truncated to 8 characters:
 directory blib/lib/auto/Net/SSLeay:
  do_https3.al, do_https2.al, do_https4.al, do_https.al truncate to do_https
  do_httpx3.al, do_httpx2.al, do_httpx4.al truncate to do_httpx
  get_https.al, get_https3.al, get_https4.al, get_http.al, get_http3.al, get_http4.al, get_httpx.al, get_httpx3.al, get_httpx4.al truncate to get_http
  head_https.al, head_https3.al, head_https4.al, head_http.al, head_http3.al, head_http4.al, head_httpx.al, head_httpx3.al, head_httpx4.al truncate to head_htt
  post_https.al, post_https3.al, post_https4.al, post_http.al, post_http3.al, post_http4.al, post_httpx.al, post_httpx3.al, post_httpx4.al truncate to post_htt
  put_https.al, put_https3.al, put_https4.al, put_http.al, put_http3.al, put_http4.al, put_httpx.al, put_httpx3.al, put_httpx4.al truncate to put_http
  ssl_read_all.al, ssl_read_until.al, ssl_read_CRLF.al truncate to ssl_read
  ssl_write_all.al, ssl_write_CRLF.al truncate to ssl_writ
  tcp_read_all.al, tcp_read_until.al, tcp_read_CRLF.al truncate to tcp_read
  tcp_write_all.al, tcp_write_CRLF.al truncate to tcp_writ
Running Mkbootstrap for SSLeay ()
chmod 644 "SSLeay.bs"
"/usr/local/trw/local/perl/5.28.2/bin/perl" "-Iinc" -MExtUtils::Command::MM -e 'cp_nonempty' -- SSLeay.bs blib/arch/auto/Net/SSLeay/SSLeay.bs 644
"/usr/local/trw/local/perl/5.28.2/bin/perl" "-Iinc" "/trw/local/perl/5.28.2/lib/5.28.2/ExtUtils/xsubpp"  -typemap '/trw/local/perl/5.28.2/lib/5.28.2/ExtUtils/typemap' -typemap '/home/tom/.cpan/build/Net-SSLeay-1.85-11/typemap'  SSLeay.xs > SSLeay.xsc
mv SSLeay.xsc SSLeay.c
cc -c  -I/usr/include  -fno-strict-aliasing -pipe -fstack-protector-strong -I/usr/local/include -D_FORTIFY_SOURCE=2 -O2    -DVERSION=\"1.85\"  -DXS_VERSION=\"1.85\" -DPIC -fPIC  "-I/trw/local/perl/5.28.2/lib/5.28.2/OpenBSD.i386-openbsd/CORE"   SSLeay.c
SSLeay.xs:5685:23: error: no member named 'tmp' in 'struct ssl3_state_st'
            md_size = s->s3->tmp.new_mac_secret_size;
                      ~~~~~  ^
1 error generated.
*** Error 1 in /home/tom/.cpan/build/Net-SSLeay-1.85-11 (Makefile:352 'SSLeay.o')
